# Barber-shop

./: .gitignore  docker-compose.yml  next.config.ts  package-lock.json  package.json  vercel.json
.claude/: settings.local.json
app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
app/components/: AboutSection.tsx  ContactSection.tsx  GallerySection.tsx  HeroSection.tsx  Navbar.tsx  SectionWrapper.tsx  ServicesSection.tsx  footer.tsx
app/components/chat/: AuthModal.tsx  ChatWidget.tsx  ChatWindow.tsx  FloatingButton.tsx  Message.tsx  TypingIndicator.tsx  VerificationModal.tsx  types.ts
app/components/sections/: JourneySection.tsx
app/components/ui/: badge.tsx  button.tsx  hover-footer.tsx  radial-orbital-timeline.tsx
app/hooks/: useChat.ts
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  seed_appointments.py  test_e2e.py  test_edge_cases.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py  002_add_last_response_id.py  003_add_appointments.py
backend/app/: config.py  database.py  main.py
backend/app/agents/: booking_agent.py  context.py  manage_agent.py  runner.py  tools.py  triage_agent.py
backend/app/middleware/: error_handler.py
backend/app/models/: __init__.py  chat.py  user.py
backend/app/routers/: appointments.py  auth.py  chat.py
backend/app/services/: auth_service.py  email_service.py  openai_service.py  rate_limiter.py
backend/app/tools/: appointment_tools.py
backend/app/utils/: date_parser.py  deps.py
data/: content.ts
lib/: animations.ts  chatApi.ts  contactApi.ts
web-backend/: .dockerignore  Dockerfile  README.md  alembic.ini  config.py  database.py  main.py  pyproject.toml  requirements.txt
web-backend/alembic/: env.py
web-backend/alembic/versions/: 001_create_contact_bookings.py
web-backend/models/: contact_booking.py
web-backend/routes/: contact.py
web-backend/schemas/: contact_booking.py
web-backend/services/: booking_service.py  email_service.py
web-backend/utils/: validators.py
