[project]
name = "barbershop-chatbot"
version = "0.1.0"
description = "AI-powered barbershop assistant chatbot backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework — [standard] bundles uvicorn, httpx, python-multipart, etc.
    "fastapi[standard]>=0.115.6",
    "python-multipart>=0.0.20",
    # Database
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=44.0.0",
    # Validation & Settings
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",
    # OpenAI Agents SDK (Responses API + Agent/Runner pattern)
    # >=0.7.0 required for previous_response_id conversation chaining
    "openai>=2.9.0",
    "openai-agents>=0.7.0",
    "tiktoken>=0.8.0",
    # Rate Limiting
    "slowapi>=0.1.9",
    "limits>=3.14.0",
    # Email
    "aiosmtplib>=3.0.2",
    "jinja2>=3.1.5",
    # Utilities
    "httpx>=0.28.1",
    "anyio>=4.7.0",
    "python-dotenv>=1.0.1",
    "orjson>=3.10.12",
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
]

[tool.uv]
# This is an application, not a library — skip building/installing the project itself
package = false
